--- a/public/css/master.css
+++ b/public/css/master.css
@@ -74,7 +74,7 @@
 
 .master-body {
   overflow-x: hidden;
-  background-image: url("/imgs/BackGrounds/bg (3).png");
+  background-image: url("../imgs/BackGrounds/bg\ \(3\).png");
   background-size: cover;
   background-attachment: fixed;
 }
