--- a/public/css/master.css
+++ b/public/css/master.css
@@ -74,7 +74,7 @@
 
 .master-body {
   overflow-x: hidden;
-  background-image: url("/imgs/BackGrounds/bg (1).png");
+  background-image: url("/imgs/BackGrounds/bg (3).png");
   background-size: cover;
   background-attachment: fixed;
 }
@@ -97,7 +97,7 @@
   resize: none;
   overflow: hidden;
   outline: none;
-  border: none;
+  background-color: inherit;
 }
 
 .comment-textarea:focus {
